# cmr_launch_utils

./: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
.circleci/: config.yml
cmr_launch_utils/actions/: __init__.py  append_environment_variable.py  touch_file.py
cmr_launch_utils/substitutions/: __init__.py  package_share_directory_substitution.py  text_format_substitution.py
launch/: spawn_gazebo_entity.launch.py  spawn_ignition_entity.launch.py
serena_launch_utils/substitutions/: __init__.py  if_else_substitution.py
