<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmr_launch_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vivian.li@cm-robotics.com">Vivian Li</maintainer>
  <license>Coalescent Mobile Robotics</license>

  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
